install tokenised prism and draft output component

--- a/client/src/theme/global.scss
+++ b/client/src/theme/global.scss
@@ -7,6 +7,7 @@
 @import "./fonts.scss";
 @import "./type-scale.scss";
 @import "./spacing.scss";
+@import "./borders.scss";
 
 //global html styles
 @import "./base.scss";
