--- a/client/src/theme/borders.scss
+++ b/client/src/theme/borders.scss
@@ -1,3 +1,5 @@
 :root {
   --theme-border: 0;
+  --theme-border--highlight: 0.5px solid var(--theme-color-paper);
+  --theme-border--underline: 0.5px solid var(--theme-color-ink);
 }
