--- a/client/src/theme/colors.scss
+++ b/client/src/theme/colors.scss
@@ -6,11 +6,11 @@
   --theme-color-brand: #e62a2a;
   --theme-color-pop: rgb(252, 92, 125);
 
-  @media (prefers-color-scheme: dark) {
-    --theme-color-paper: rgba(12, 12, 50, 1);
-    --theme-color-ink: rgba(240, 240, 240, 1);
-    --theme-color-pop: rgba(129, 67, 201, 1);
-    --theme-color-shade: rgba(252, 92, 125, 0.4);
-    --theme-color-accent: rgb(93 223 253);
-  }
+  // @media (prefers-color-scheme: dark) {
+  //   --theme-color-paper: rgba(12, 12, 50, 1);
+  //   --theme-color-ink: rgba(240, 240, 240, 1);
+  //   --theme-color-pop: rgba(129, 67, 201, 1);
+  //   --theme-color-shade: rgba(252, 92, 125, 0.4);
+  //   --theme-color-accent: rgb(93 223 253);
+  // }
 }
