--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -9,7 +9,6 @@ html {
   background-color: var(--theme-color-paper);
   color: var(--theme-color-ink);
   margin: 0;
-  @include gradient;
 }
 
 $heading__levels: 1, 2, 3, 4, 5, 6;
@@ -22,9 +21,16 @@ $heading__levels: 1, 2, 3, 4, 5, 6;
 }
 
 a {
-  box-shadow: 0 0.275em 0 var(--theme-color-shade);
-  transition: box-shadow 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55), color 0.3s;
-  text-decoration: none;
+  background-image: linear-gradient(
+    120deg,
+    var(--theme-color-accent) 0%,
+    var(--theme-color-pop) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  transition: background-size 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55),
+    color 0.3s;
 
   &:link,
   &:visited,
@@ -35,7 +41,7 @@ a {
   }
   &:focus,
   &:hover {
-    color: var(--theme-color-accent);
-    box-shadow: 0 0 0 var(--theme-color-shade);
+    color: var(--theme-color-paper);
+    background-size: 100% 88%;
   }
 }
