--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -6,8 +6,8 @@ body,
 html {
   font-family: var(--theme-font-copy);
   font-size: 100%;
-  background-color: var(--theme-color-paper);
-  color: var(--theme-color-ink);
+  background-color: var(--theme-color--paper);
+  color: var(--theme-color--ink);
   margin: 0;
 }
 
@@ -23,8 +23,8 @@ $heading__levels: 1, 2, 3, 4, 5, 6;
 a {
   background-image: linear-gradient(
     120deg,
-    var(--theme-color-accent) 0%,
-    var(--theme-color-pop) 100%
+    var(--theme-color--accent) 0%,
+    var(--theme-color--pop) 100%
   );
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
@@ -36,12 +36,12 @@ a {
   &:visited,
   &:focus,
   &:hover {
-    color: var(--theme-color-ink);
+    color: var(--theme-color--ink);
     text-decoration: none;
   }
   &:focus,
   &:hover {
-    color: var(--theme-color-paper);
+    color: var(--theme-color--paper);
     background-size: 100% 88%;
   }
 }
