--- a/client/src/Layout/Footer/Footer.scss
+++ b/client/src/Layout/Footer/Footer.scss
@@ -8,6 +8,5 @@
     ". ..... ..... ." var(--theme-spacing--3) / var(--theme-spacing--2) 1fr auto var(
       --theme-spacing--2
     );
-
-  background: var(--theme-color--pop);
+  @include dots($color: var(--theme-color--pop));
 }
