--- a/client/src/theme/mixins.scss
+++ b/client/src/theme/mixins.scss
@@ -14,3 +14,13 @@
 ) {
   background-image: linear-gradient(to right, $from, $to);
 }
+
+@mixin dots($color: currentColor) {
+  background-image: radial-gradient($color 1px, transparent 1px);
+  background-size: calc(10 * 1px) calc(10 * 1px);
+}
+
+@mixin invert {
+  background: var(--theme-color--ink);
+  color: var(--theme-color--paper);
+}
