--- a/client/src/theme/mixins/dots.scss
+++ b/client/src/theme/mixins/dots.scss
@@ -1,4 +1,4 @@
-@mixin dots($color: currentColor) {
-  background-image: radial-gradient($color 1px, transparent 1px);
-  background-size: calc(10 * 1px) calc(10 * 1px);
+@mixin dots($color: currentColor, $size: 1px, $spacing: 10px) {
+  background-image: radial-gradient($color $size, transparent $size);
+  background-size: $spacing $spacing;
 }
