set up basic layout to look at
it's not a finished design, deliberately done in a wireframey style so we can consider UX
- put in a Split grid 
- componentised everything roughly so it's readable/navigable
- put in a wireframey style so we can play around with placement/toolbars/interactions

--- a/client/src/theme/colors.scss
+++ b/client/src/theme/colors.scss
@@ -1,5 +1,5 @@
 :root {
-  --theme-color--paper: rgba(240, 240, 240, 1);
+  --theme-color--paper: rgb(240, 240, 240);
   --theme-color--ink: rgba(12, 12, 50, 1);
   --theme-color--ink-fade: rgba(12, 12, 50, 0.25);
   --theme-color--accent: rgba(129, 67, 201, 1);
