--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,7 @@
 @import "theme/utilities.scss";
 
 .c-layout {
-  @include grid-assign(header, panels, blockly, footer);
+  @include grid-assign(header, panels, footer);
   // sorry, this is petty
   --calc-pack--10: calc(
     calc(10 * calc(100vw / 12)) - calc(0.66 * calc(var(--theme-spacing--4) * 3))
@@ -12,18 +12,19 @@
   grid-template-columns:
     0 minmax(var(--calc-pack--10), 1060px) minmax(var(--calc-pack--2), 220px)
     0;
-  grid-template-rows: 0 auto 80vh 1fr;
+  grid-template-rows: 0 auto minmax(80vh, 1fr) minmax(20vh, fit-content);
   grid-template-areas:
     ". ...... ...... ."
     ". header header . "
-    ". blockly panels ."
+    ". panels panels ."
     "footer footer footer footer ";
   gap: var(--theme-spacing--4);
   place-content: center;
   max-width: 100vw;
   overflow-y: hidden;
 
-  main {
-    display: contents;
+  &__panels {
+    display: grid;
+    grid-template-columns: 2fr 12px 1fr 12px 6fr;
   }
 }
