--- a/client/src/Button/Button.scss
+++ b/client/src/Button/Button.scss
@@ -19,29 +19,32 @@
   --theme-spacing--4: 0.75em;
   // styles
   color: var(--theme-color--ink);
-  background: var(--theme-color--paper);
+  background-color: var(--theme-color--paper);
   border: var(--theme-border--thick);
   border-radius: var(--theme-border-radius);
   padding: var(--theme-spacing--3) var(--theme-spacing--4);
-  box-shadow: var(--theme-spacing--1) var(--theme-spacing--2)
-    var(--theme-color--accent);
-  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: var(--theme-spacing--1) var(--theme-spacing--1)
+    var(--theme-color--pop);
+  transition: background 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
   @include on-event {
-    @include invert;
+    @include dots($color: var(--theme-color--pop));
   }
 
   //elements
 
   &__text {
+    white-space: nowrap;
   }
 
   &__icon {
     width: 1em;
     height: 1em;
+    border: 0;
+    box-shadow: 0;
+  }
 
-    &--menu {
-      background: blue;
-    }
+  &--handle {
+    height: 100%;
   }
 }
