--- a/client/src/Output/Output.scss
+++ b/client/src/Output/Output.scss
@@ -1,12 +1,15 @@
 @import "../theme/utilities.scss";
 
-.output {
+.c-output {
   max-width: 80ch;
   overflow: hidden;
   pre {
     padding: var(--theme-spacing--3);
+    padding-bottom: 25ch;
     border: var(--theme-border--highlight);
     width: 100%;
+    height: 100%;
+    min-height: 50vh;
     overflow: auto;
   }
 }
