--- a/client/src/Output/Output.scss
+++ b/client/src/Output/Output.scss
@@ -4,12 +4,14 @@
   max-width: 80ch;
   overflow: hidden;
   pre {
-    padding: var(--theme-spacing--3);
+    margin: 0;
+    padding: var(--theme-spacing--2);
     padding-bottom: 25ch;
-    border: var(--theme-border--highlight);
     width: 100%;
-    height: 100%;
     min-height: 50vh;
     overflow: auto;
+    border: var(--theme-border--thick);
+    border-radius: var(--theme-border-radius--subtle);
+    border-color: var(--theme-color--pop);
   }
 }
