--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -6,7 +6,7 @@ body,
 html {
   font-family: var(--theme-font--copy);
   font-size: 100%;
-  background-color: var(--theme-color--paper);
+  // background-color: var(--theme-color--paper);
   color: var(--theme-color--ink);
   @include dots($color: var(--theme-color--ink-fade), $spacing: 25px);
   margin: 0;
