--- a/style.css
+++ b/style.css
@@ -295,3 +295,19 @@ button:focus {
   opacity: 0.8;
   top: 100vh;
 }
+
+/* ATTENTION DELIGHT */
+.has-changed {
+  animation: attention 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+@keyframes attention {
+  0% {
+    filter: brightness(1);
+  }
+  50% {
+    filter: brightness(3);
+  }
+  100% {
+    filter: brightness(1);
+  }
+}
