--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ body:has(#toc.open) {
 /* TEXT */
 
 .instructions {
-  max-width: 47em;
+  columns: 2 320px;
+  width: clamp(90vw, 320px + 5vw, 1200px);
   padding: 3.5rem 3.5rem 1.5rem;
   margin: 3rem auto 2rem 0;
   background-color: white;
